更新计算机网络总结

--- a/数据结构/数据结构总结.md
+++ b/数据结构/数据结构总结.md
@@ -234,3 +234,86 @@ SSTable ST; // 定义顺序表 ST
 比较排序
 
 基数排序
+
+#### 存储结构
+
+```c
+#define MAXSIZE 20 // 设记录不超过 20 个
+typedef int KeyType; // 设关键字为整形量（int 型）
+```
+
+```c
+Typedef struct { // 定义每个记录（数据元素）的结构
+	KeyType key; // 关键字
+	InfoType otherinfo; //其他数据项 
+}RedType;
+```
+
+```c
+Typedef struct { // 定义顺序表的结构
+	RedType r[MAXSIZE + 1]; // 存储顺序表的向量 r[0]一般作哨兵或者缓冲区
+	int length; // 顺序表的长度
+}SqList;
+```
+
+#### 插入排序
+
+##### 直接插入排序
+
+含有哨兵的方式更省时间![image-20230207202411693](https://olrando.oss-cn-chengdu.aliyuncs.com/img/image-20230207202411693.png)
+
+##### 折半插入排序
+
+![image-20230207203204667](https://olrando.oss-cn-chengdu.aliyuncs.com/img/image-20230207203204667.png)
+
+
+
+##### 希尔排序
+
+![image-20230207211548285](https://olrando.oss-cn-chengdu.aliyuncs.com/img/image-20230207211548285.png)
+
+- 思路定义增量序列Dm>Dm-1>...>D1=1 (dk 是增量序列)![image-20230207212056774](https://olrando.oss-cn-chengdu.aliyuncs.com/img/image-20230207212056774.png)
+
+#### 交换排序
+
+##### 冒泡排序
+
+##### 快速排序
+
+- 基本思想：任取一个元素为中心
+- 所有比它小的元素放前、小的放后，形成左右两个子表
+- 对各子表重新选择中心元素并依次规则调整
+- 直到子表只剩下一个元素结束
+
+#### 选择排序
+
+##### 简单选择排序
+
+- 每趟都找最小值放在前面
+
+##### 堆排序
+
+![image-20230207215248156](https://olrando.oss-cn-chengdu.aliyuncs.com/img/image-20230207215248156.png)
+
+![image-20230207215306208](https://olrando.oss-cn-chengdu.aliyuncs.com/img/image-20230207215306208.png)
+
+- 无序表如何建立堆
+  - 从最后一个非叶子节点开始（n/2），以该元素为根的二叉树调整为堆
+  - 将以序号为n/2-1的节点为根的二叉树调整为准
+  - n/2-2...![image-20230207221822080](https://olrando.oss-cn-chengdu.aliyuncs.com/img/image-20230207221822080.png)
+  - 
+- 如何利用堆进行排序
+  - 将树的根节点拿出来
+  - 对左右子树对比选择需要的最大值（最小值）直到叶子节点
+
+![image-20230207222123921](https://olrando.oss-cn-chengdu.aliyuncs.com/img/image-20230207222123921.png)
+
+#### 归并排序
+
+- 基本思想：将两个或两个以上归并为一组（归并树 只需要log2n趟）![image-20230207222348135](https://olrando.oss-cn-chengdu.aliyuncs.com/img/image-20230207222348135.png)
+- 利用双指针合并两个或以上的数组
+
+#### 基数排序
+
+- 不用比较
+- 按照个位十位百位...每次丢到桶中再取出反复执行即可
