--- a/青队云平台.md
+++ b/青队云平台.md
@@ -1,23 +1,7 @@
 # 青队云平台
 
-### mani.js 引入 jQuery
+路由
 
+引入 路由守卫
 
-
-![image-20230118125127750](https://olrando.oss-cn-chengdu.aliyuncs.com/img/image-20230118125127750.png)
-
-### 滚动条置顶（以下方案未成功）
-
-![image-20230118125309833](https://olrando.oss-cn-chengdu.aliyuncs.com/img/image-20230118125309833.png)
-
-
-
-### 切换页面 滚动条置顶
-
-```js
-mounted() {
-    //&nbsp;切换页面时滚动条自动滚动到顶部
-    window.scrollTo(0,0);
-},
-```
-
+引入 vuex 将用户信息、token 存入在 store 中
