--- a/面向社会网格化治理的智能系统.md
+++ b/面向社会网格化治理的智能系统.md
@@ -1,9 +1,192 @@
 # 面向社会网格化治理的智能系统
 
+前端：vue2 + 百度地图 js api + echarts
+
+- vue中包含的技术有：ES6语法、axios获取后端数据、element-ui组件库
+
+- 利用 baidu-map 提供的接口获取到地图数据
+
+  - 把创建marker，polygon的函数封装在一个单独的utils.js文件中，方便维护
+  - 把加载地图封装在一个单独的initMap.vue组建中，可以在多个页面中调用，减少代码冗余
+
+- 通过利用百度地图 js api,依赖百度地图提供的后台服务,获取地图数据，根据用户输入经纬度动态定位到指定位置展示。
+
+  ![image-20230211124648763](https://olrando.oss-cn-chengdu.aliyuncs.com/img/image-20230211124648763.png)
+
+- 根据后端传入的经纬度设置坐标点之间绘画区域![区域划分](https://olrando.oss-cn-chengdu.aliyuncs.com/img/%E5%8C%BA%E5%9F%9F%E5%88%92%E5%88%86.png)
+
+  - 绘画区域实现思路：
+    1. 点击页面右上角按钮，开始监听鼠标的getLngLat事件，根据用户点击的地方生成marker
+    2. 点击清除按钮，清除地图上用户创建的polygon；点击完成按钮保存用户创建的polygon，通过isOptions控制弹出设置名称和颜色的部分
+    3. 点击取消，清除用户地图上创建的polygon；点击保存，保存用户创建的polygon到左侧的列表中
+
+- 绘画区域实现代码：
+
+```js
+<script>
+import initMap from './initMap.vue'
+
+import { createMarker, createPolygon } from './utils'
+
+export default {
+  name: 'division',
+  components: {
+    initMap
+  },
+  data() {
+    return {
+      map: undefined,
+      tempMarkerArr: [], // 新增polygon时的marker数据
+      isCollapse: true,
+      isConfirm: true, // 是否确认画的多边形
+      isOptions: false, // polygon配置信息面板
+      isUpdate: false,
+      disabled: false, // 划分区域按钮
+      // polygon的配置信息
+      options: {
+        polygon: undefined,
+        name: '区域',
+        fillColor: '#409EFF',
+        polygonArr: []
+      },
+      // 模拟polygon数组
+      areaArr: [
+        {
+          polygon: undefined,
+          name: '区域一',
+          fillColor: '#409EFF',
+          polygonArr: [
+            new window.BMap.Point(117.158469, 31.781578),
+            new window.BMap.Point(117.15236, 31.779982),
+            new window.BMap.Point(117.15272, 31.778201),
+            new window.BMap.Point(117.152756, 31.775316),
+            new window.BMap.Point(117.15908, 31.774917),
+            new window.BMap.Point(117.162637, 31.778662)
+          ]
+        },
+        {
+          polygon: undefined,
+          name: '区域二',
+          fillColor: '#ea969c',
+          polygonArr: [
+            new window.BMap.Point(117.174207, 31.790448),
+            new window.BMap.Point(117.179848, 31.790141),
+            new window.BMap.Point(117.180855, 31.78655),
+            new window.BMap.Point(117.178303, 31.783174),
+            new window.BMap.Point(117.173524, 31.784095),
+            new window.BMap.Point(117.169105, 31.788668)
+          ]
+        }
+      ]
+    }
+  },
+  created() {
+    // 获取初始化地图map对象
+    this.mapObj()
+  },
+  methods: {
+    mapObj(data) {
+      this.map = data
+    },
+    clearAll() {
+      this.tempMarkerArr.forEach(item => {
+        this.map.removeOverlay(item)
+      })
+      this.map.setDefaultCursor('pointer')
+      this.map.removeEventListener('click', this.getLngLat)
+      this.isConfirm = true
+      this.disabled = false
+    },
+    // 开始绘制多边形
+    drawPolygon() {
+      this.map.setDefaultCursor('crosshair')
+      this.map.addEventListener('click', this.getLngLat)
+      this.disabled = true // 防止创建多个addEventListener
+      this.isConfirm = false
+      this.isOptions = false
+      this.options = {
+        polygon: undefined,
+        name: '区域',
+        fillColor: '#409EFF',
+        polygonArr: []
+      }
+    },
+    // 完成绘制多边形
+    finishPolygon() {
+      this.options.polygon = createPolygon(this.map, this.options.polygonArr)
+      this.map.removeEventListener('click', this.getLngLat)
+      this.map.setDefaultCursor('pointer')
+      this.isOptions = true
+      this.isUpdate = false
+      this.isConfirm = true
+    },
+    // 取消
+    doCancle() {
+      if (!this.isUpdate) {
+        this.map.removeOverlay(this.options.polygon)
+        this.tempMarkerArr.forEach(item => {
+          this.map.removeOverlay(item)
+        })
+      }
+      this.isOptions = false
+      this.disabled = false
+    },
+    // 删除
+    doDelete() {
+      this.map.removeOverlay(this.options.polygon)
+      this.areaArr.forEach((item, index) => {
+        if (item.name === this.options.name) {
+          this.areaArr.splice(index, 1)
+        }
+      })
+      this.isOptions = false
+      this.disabled = false
+    },
+    // 保存
+    doSavePolygon() {
+      if (this.isUpdate) {
+        this.areaArr.forEach(item => {
+          if (item.name === this.options.name) {
+            item.polygon.setFillColor(this.options.fillColor)
+          }
+        })
+      } else {
+        this.tempMarkerArr.forEach(item => {
+          this.map.removeOverlay(item)
+        })
+        this.options.polygon.setFillColor(this.options.fillColor)
+        this.areaArr.push(this.options)
+      }
+      this.isOptions = false
+      this.isConfirm = true
+      this.disabled = false
+    },
+    // 点击导航
+    getArea(data) {
+      if (data.polygon === undefined) {
+        data.polygon = createPolygon(this.map, data.polygonArr)
+        data.polygon.setFillColor(data.fillColor)
+      }
+      this.map.panTo(data.polygonArr[2])
+      this.options = data
+      this.isOptions = true
+      this.isUpdate = true
+    },
+    // 根据用户点击的经纬度标点
+    getLngLat(e) {
+      const point = new window.BMap.Point(e.point.lng, e.point.lat)
+      const markerIcon = require('../../../assets/img/map/square.png')
+      const marker = createMarker(this.map, markerIcon, point)
+      this.tempMarkerArr.push(marker)
+      this.options.polygonArr.push(point)
+    }
+  }
+}
+</script>
+
+```
 
 
-网格社团检测，经纬度定点定位，以道路为桥梁形成网格
 
-老师想法：Web方式 网格区域实现可视化
 
-个人实现思路 基于 echarts 利用 map 图构建地图模块，通过经纬度设定网格化区域，并使用区域热力图 实现可视化。
+
