--- a/数据结构/数据结构总结.md
+++ b/数据结构/数据结构总结.md
@@ -260,7 +260,9 @@ Typedef struct { // 定义顺序表的结构
 
 ##### 直接插入排序
 
-含有哨兵的方式更省时间![image-20230207202411693](https://olrando.oss-cn-chengdu.aliyuncs.com/img/image-20230207202411693.png)
+含有哨兵的方式更省时间
+
+![image-20230207202411693](https://olrando.oss-cn-chengdu.aliyuncs.com/img/image-20230207202411693.png)
 
 ##### 折半插入排序
 
