--- a/计算机网络.md
+++ b/计算机网络.md
@@ -27,6 +27,10 @@
 
 ![image-20230215160936272](https://olrando.oss-cn-chengdu.aliyuncs.com/img/image-20230215160936272.png)
 
+![image-20230226161213485](https://olrando.oss-cn-chengdu.aliyuncs.com/img/image-20230226161213485.png)
+
+
+
 ![image-20230215161230458](https://olrando.oss-cn-chengdu.aliyuncs.com/img/image-20230215161230458.png)
 
 ![image-20230215161357866](https://olrando.oss-cn-chengdu.aliyuncs.com/img/image-20230215161357866.png)
@@ -154,7 +158,7 @@
 
 ![image-20230217181639663](https://olrando.oss-cn-chengdu.aliyuncs.com/img/image-20230217181639663.png)
 
-## 第二章：应用层
+## 第二章：物理层
 
 常用编码方式：
 
@@ -454,7 +458,7 @@ DHCP中继代理
 
 ### 文件传送协议FTP
 
-![image-20230217165441499](https://olrando.oss-cn-chengdu.aliyuncs.com/img/image-20230217165441499.png)
+![image-20230217165441499](E:\image-20230217165441499.png)
 
 #### SMTP
 
